WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53610
Regression: adjacent sibling selector not working as expected
https://bugs.webkit.org/show_bug.cgi?id=53610
Summary
Regression: adjacent sibling selector not working as expected
Peter Beverloo
Reported
2011-02-02 11:30:41 PST
Created
attachment 80935
[details]
Text-case Test-case attached. Likely to be caused by
r52370
. Expected: Black text Red text Black text Actual: Black text Red text Red text The CSS rule which breaks (adjacent sibling) is: p.foo + p { color: red; }
Attachments
Text-case
(336 bytes, text/html)
2011-02-02 11:30 PST
,
Peter Beverloo
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Peter Beverloo
Comment 1
2011-02-02 11:51:26 PST
Revision 76012 obviously, issue 52370.
Simon Fraser (smfr)
Comment 2
2011-02-04 11:18:10 PST
<
rdar://problem/8960033
>
Antti Koivisto
Comment 3
2011-02-04 13:10:10 PST
Bug 53574
has a patch that will fix this one too.
Antti Koivisto
Comment 4
2011-02-04 13:16:47 PST
http://trac.webkit.org/changeset/77664
WebKit Review Bot
Comment 5
2011-02-04 17:28:47 PST
http://trac.webkit.org/changeset/77664
might have broken GTK Linux 32-bit Debug and GTK Linux 64-bit Debug The following tests are not passing: fast/blockflow/Kusa-Makura-background-canvas.html fast/blockflow/japanese-ruby-horizontal-bt.html fast/blockflow/japanese-ruby-vertical-lr.html fast/blockflow/japanese-ruby-vertical-rl.html fast/ruby/nested-ruby.html fast/text/emphasis-avoid-ruby.html
Andy Estes
Comment 6
2011-02-05 17:44:00 PST
***
Bug 53819
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug