https://bugs.webkit.org/show_bug.cgi?id=53610 Regression: adjacent sibling selector not working as expected <rdar://problem/8960033>

Reviewed by Dimitri Glazkov.

Source/WebCore:

https://bugs.webkit.org/show_bug.cgi?id=53574
REGRESSION (r76012): :last-child:after not working as expected
<rdar://problem/8948643>

Test for additional conditions in parent style that prevent sharing.

Tests: fast/selectors/style-sharing-adjacent-selector.html
       fast/selectors/style-sharing-last-child.html

* css/CSSStyleSelector.cpp:
(WebCore::parentStylePreventsSharing):
(WebCore::CSSStyleSelector::locateSharedStyle):

LayoutTests:

https://bugs.webkit.org/show_bug.cgi?id=53574
REGRESSION (r76012): :last-child:after not working as expected
<rdar://problem/8948643>

* fast/selectors/style-sharing-adjacent-selector-expected.txt: Added.
* fast/selectors/style-sharing-adjacent-selector.html: Added.
* fast/selectors/style-sharing-last-child-expected.txt: Added.
* fast/selectors/style-sharing-last-child.html: Added.



Canonical link: https://commits.webkit.org/67735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77664 268f45cc-cd09-0410-ab3c-d52691b4dbfc